# tinyolly

./: .agent-memory.md  .gitignore  .golangci.yml  .pre-commit-config.yaml  .release-please-manifest.json  .semantic-releaserc.json  BUILD-DEPENDENCY-TREE.md  CHANGELOG.md  CONTRIBUTING.md  FILTERING-IMPROVEMENT-PLAN.md  LICENSE  LICENSE-BSD3-ORIGINAL  LICENSE-HEADER-AGPL.txt  LICENSE-HEADER-BSD3.txt  Makefile  NOTICE  OBSOLETE_SCRIPTS.md  PHASE-0-COMPLETE.md  README.md  REBRANDING-PLAN.md  RELEASE-IMPLEMENTATION-SUMMARY.md  RELEASE-PLEASE-SETUP.md  STORAGE-FIX-PLAN.md  V2-API-COMPARISON.md  V2-API-MIGRATION-PLAN.md  V2-MIGRATION-TRACKING.md  V2-QUICK-REFERENCE.md  V2-UI-MIGRATION-PLAN.md  VERSIONING-STRATEGY.md  deploy-argocd.sh  install-mkdocs.sh  mkdocs-deploy.sh  mkdocs.yml  package-lock.json  package.json  pyproject.toml  release-please-config.json  release.sh  renovate.json  setup-precommit.sh  (+2 more)
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: auto-merge-releases.yml  build-and-publish.yml  build-release.yml  docs.yml  release-please.yml  release.yml  semantic-release.yml  test.yml
.kind/: README.md  locals.tf  main.tf  ollyscale-config  outputs.tf  variables.tf
apps/ai-agent-demo/: Dockerfile  __init__.py  agent.py  requirements.txt
apps/demo/: .releaserc.json  CHANGELOG.md  Dockerfile  README.md  __init__.py  backend.py  frontend.py  pyproject.toml  requirements.txt
apps/demo-otel-agent/: .releaserc.json  CHANGELOG.md  Dockerfile  README.md  __init__.py  agent.py  pyproject.toml
apps/frontend/: Dockerfile  OTLP_SPECIFICATION_COMPLIANCE.md  README.md  alembic.ini  main.py  pyproject.toml
apps/frontend/alembic/: env.py
apps/frontend/alembic/versions/: 29f08ce99e6e_initial_otel_schema.py  310d6c3bbbf4_add_partition_management_functions.py  44ca99640ec5_create_new_database.py  add_service_id_to_logs_metrics.py
apps/frontend/app/: dependencies.py  main.py  main_entry.py  main_mode.py  models.py  schema_v2.sql  storage.py
apps/frontend/app/db/: __init__.py  session.py
apps/frontend/app/models/: api.py  database.py  otel.py
apps/frontend/app/routers/: health.py  ingest.py  query.py
apps/frontend/app/storage/: OTLP_FIELD_MAPPING.md  __init__.py  interface.py  postgres.py  postgres_orm.py
apps/frontend/receiver/: __init__.py  server.py
apps/frontend/tests/: __init__.py  conftest.py  fixtures.py  test_api_errors.py  test_api_ingest.py  test_api_query.py  test_health.py  test_logs_metrics_storage.py  test_models.py  test_namespace_filtering.py  test_namespace_filtering_mocked.py  test_otlp.py  test_postgres_orm.py  test_postgres_storage.py  test_postgres_storage_unit.py  test_storage.py  test_storage_parsing.py  test_timestamp_conversion.py  test_trace_id_conversion.py
apps/frontend/tests/fixtures/: otlp_examples.json
apps/ollyscale/: .releaserc.json  CHANGELOG.md  Dockerfile  README.md  main.py  models.py  pyproject.toml  requirements-test.txt  requirements.txt
apps/ollyscale-ui/: .bump  .releaserc.json  CHANGELOG.md  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json
apps/ollyscale/app/: __init__.py  config.py  dependencies.py  main.py  storage.py
apps/ollyscale/app/core/: logging.py  middleware.py  telemetry.py
apps/ollyscale/app/managers/: alerts.py  websocket.py
apps/ollyscale/app/routers/: __init__.py  admin.py  ingest.py  opamp.py  query.py  services.py  system.py
apps/ollyscale/app/services/: __init__.py  validation.py
apps/ollyscale/common/: __init__.py  otlp_utils.py  storage.py
apps/ollyscale/receiver/: __init__.py  server.py
apps/ollyscale/tests/: __init__.py  conftest.py  run_tests.sh  test_alerts.py  test_compression.py  test_edge_cases.py  test_ingest_postgres.py  test_logs.py  test_metrics.py  test_services.py  test_spans.py  test_storage_postgres.py  test_traces.py  test_ttl_cleanup.py
apps/opamp-server/: .releaserc.json  CHANGELOG.md  Dockerfile  README.md  go.mod  go.sum  main.go
charts/: README.md  build-and-push-local.sh  deploy-to-argocd.sh  install.sh  package.sh  push-oci.sh  upgrade.sh  values-local-dev.yaml
docker/: 01-start-core.sh  03-force-rebuild.sh  04-rebuild-ui.sh  docker-compose-tinyolly-core-local.yml  docker-compose-tinyolly-core.yml  otel-collector-config.yaml
docker-ai-agent-demo/: 01-deploy-ai-demo-local.sh  01-deploy-ai-demo.sh  02-stop-ai-demo.sh  03-cleanup-ai-demo.sh  04-cleanup-images.sh  Dockerfile  docker-compose.yml
docker-core-only/: 00-force-rebuild.sh  01-start-core.sh
docker-demo/: 01-deploy-demo.sh  Dockerfile  Dockerfile.backend  app.py  prom_remote_write_v2.py  requirements.txt
docker-demo-ebpf/: Dockerfile  Dockerfile.backend
docs/: CARDINALITY-PROTECTION.md  ai-agent-deployment.md  ai-agent.md  api.md  build-system.md  docker.md  ebpf.md  index.md  kubernetes.md  licensing.md  metrics.md  ollyscale-v2-postgres.md  otel-collector.md  partition-management.md  postgres-infrastructure.md  precommit.md  quickstart.md  release-migration.md  release-process.md  release-system.md  semantic-release-proposal.md  technical.md  trace-lint.md  v2-api-migration-plan.md
docs/demos/: index.md  (+2 more)
helm/: README.md  build-and-push-local.sh  deploy-to-argocd.sh  package.sh  tinyolly-0.1.0.tgz  tinyolly-0.1.1.tgz  values-local-dev.yaml
k8s/: 01-build-images.sh  02-deploy-tinyolly.sh  03-cleanup.sh  05-rebuild-local-changes.sh  06-rebuild-all-local.sh  07-deploy-local-images.sh  08-configure-kind-registry.sh  otel-collector-config.yaml  otel-collector.yaml  redis.yaml  tinyolly-opamp-server.yaml  tinyolly-otlp-receiver.yaml  tinyolly-ui.yaml
k8s-ai-agent-demo/: README.md
k8s-core-only/: 01-deploy.sh  02-cleanup.sh  cleanup.sh  deploy.sh  tinyolly-opamp-server.yaml  tinyolly-otlp-receiver.yaml  tinyolly-ui.yaml
k8s-demo/: 01-build-images.sh  02-deploy.sh  backend-service.py
release-migration/: index.html
release-notes/: RELEASE-NOTES-v1.0.0.md  RELEASE-NOTES-v2.0.0.md  RELEASE-NOTES-v2.1.0.md
release-system/: index.html
scripts/: precommit-npm-check.sh  update-chart-values.sh  validate-release-config.sh
search/: search_index.json
(+362 files in other folders)
