[project]
name = "ollyscale"
description = "Lightweight OpenTelemetry observability platform for local development"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}

[tool.ruff]
# Set the target Python version
target-version = "py314"

# Exclude common directories
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "docs/overrides",
]

# Line length
line-length = 120
indent-width = 4

[tool.ruff.lint]
# Enable pycodestyle (`E`), pyflakes (`F`), isort (`I`), and other rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "PL",     # pylint
    "RUF",    # Ruff-specific rules
]

ignore = [
    "E501",   # Line too long (handled by formatter)
    "PLR0913", # Too many arguments
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR2004", # Magic value used in comparison
    "PLR0911", # Too many return statements
    "B008",   # Do not perform function call in argument defaults
    "ERA001", # Commented-out code (intentional documentation/TODOs)
    "PLW1508", # Invalid type for env var default (int defaults are intentional)
    "RUF012", # Mutable class attributes in Pydantic Config
    "TCH001", # Move import into type-checking block - conflicts with Python 3.14 + FastAPI
    "TCH002", # Move import into type-checking block - conflicts with Python 3.14 + FastAPI
    "TCH003", # Move import into type-checking block - conflicts with Python 3.14 + FastAPI
]

# Allow fix for all enabled rules (when `--fix` is provided)
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces, not tabs
indent-style = "space"

# Respect magic trailing commas
skip-magic-trailing-comma = false

# Automatically detect line endings
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["ollyscale", "app", "common", "receiver"]

[tool.ruff.lint.per-file-ignores]
# Ignore unused imports in __init__.py files
"__init__.py" = ["F401", "F403"]
# Test files can use assertions, magic values, and unused arguments (for skipped tests)
"tests/**/*.py" = ["PLR2004", "S101", "ARG002", "ARG001"]
"**/test_*.py" = ["PLR2004", "S101", "ARG002", "ARG001"]
# Dependencies.py and receiver/server.py use global for singleton pattern
"**/dependencies.py" = ["PLW0603"]
"**/receiver/server.py" = ["PLW0603", "PLW0602", "PLC0415"]
"**/app/routers/ingest.py" = ["PLW0603", "B904"]
# main.py imports inside functions intentionally (conditional loading based on MODE)
"main.py" = ["PLC0415"]
# system.py uses global for template registration
"**/app/routers/system.py" = ["PLW0603"]
# validation.py intentionally reassigns loop variables for clarity
"**/app/services/validation.py" = ["PLW2901"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/ollyscale/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["apps/ollyscale"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
