[project]
name = "ollyscale-demo-otel-agent"
version = "0.1.0"
description = "AI agent demo with OpenTelemetry instrumentation for ollyScale observability platform"
authors = [
    {name = "Infrastructure Architects, LLC", email = "info@ollyscale.io"},
    {name = "Ryan Faircloth", email = "ryan@faircloth.org"}
]
license = "AGPL-3.0"
keywords = ["opentelemetry", "observability", "demo", "ai", "ollama", "tracing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11,<4"
dependencies = [
    # AI/LLM client
    "ollama>=0.4.0",

    # OpenTelemetry core
    "opentelemetry-api>=1.22.0",

    # OpenTelemetry instrumentation for Ollama
    "opentelemetry-instrumentation-ollama>=0.30.0",
]

[project.urls]
Homepage = "https://ryanfaircloth.github.io/ollyscale/"
Repository = "https://github.com/ryanfaircloth/ollyscale"
Documentation = "https://ryanfaircloth.github.io/ollyscale/"
"Bug Tracker" = "https://github.com/ryanfaircloth/ollyscale/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "black>=24.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.poetry]
# Include the root module files as the package
packages = [
    {include = "*.py", from = "."}
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Target Python version
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "ERA", "PL", "RUF",
]
ignore = [
    "E501", "PLR0913", "PLR0912", "PLR0915", "PLR2004", "PLR0911", "B008", "ERA001",
    "PLW1508", "RUF012", "TCH001", "TCH002", "TCH003",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["PLR2004", "S101", "ARG002", "ARG001"]
"**/test_*.py" = ["PLR2004", "S101", "ARG002", "ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["ollyscale", "app", "common", "receiver"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Allow untyped for demo code
ignore_missing_imports = true
