[project]
name = "ollyscale-demo"
version = "0.1.0"
description = "Demo Flask microservices for ollyScale observability platform"
authors = [
    {name = "Infrastructure Architects, LLC", email = "info@ollyscale.io"},
    {name = "Ryan Faircloth", email = "ryan@faircloth.org"}
]
license = {text = "BSD-3-Clause"}
readme = "../../README.md"
keywords = ["opentelemetry", "observability", "demo", "flask", "microservices"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Framework :: Flask",
]
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "flask>=3.1.0",

    # HTTP client for service communication
    "requests>=2.32.3",

    # Metrics collection
    "prometheus-client>=0.21.1",
]

[project.urls]
Homepage = "https://ryanfaircloth.github.io/ollyscale/"
Repository = "https://github.com/ryanfaircloth/ollyscale"
Documentation = "https://ryanfaircloth.github.io/ollyscale/"
"Bug Tracker" = "https://github.com/ryanfaircloth/ollyscale/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-flask>=1.3.0",
    "httpx>=0.26.0",
    "black>=24.0.0",
    "flake8>=6.0.0",
]

[tool.poetry]
name = "ollyscale-demo"
version = "2.1.0"
description = "Demo Flask microservices for ollyScale observability platform"
authors = [
    "Infrastructure Architects, LLC <info@ollyscale.io>",
    "Ryan Faircloth <ryan@faircloth.org>"
]
license = "BSD-3-Clause"
readme = "../../README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
flask = ">=3.1.0"
requests = ">=2.32.3"
prometheus-client = ">=0.21.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-flask = ">=1.3.0"
httpx = ">=0.26.0"
black = ">=24.0.0"
flake8 = ">=6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Inherit from root pyproject.toml
extend = "../../pyproject.toml"

# Demo-specific overrides if needed
[tool.ruff.lint]
# Allow print statements in demo code
ignore = ["T201"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
