[project]

name = "ollyscale-frontend"
version = "0.1.0"
description = "FastAPI v2 app for ollyScale, clean OTEL receiver and API."
authors = [
    { name = "ollyScale Team", email = "dev@ollyscale.io" }
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0,<1.0.0",
    "pydantic>=2.6.0,<3.0.0",
    "asyncpg>=0.29.0,<1.0.0",
    "uvicorn[standard]>=0.29.0,<1.0.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
