[project]
name = "ollyscale"
version = "0.1.0"
description = "Lightweight OpenTelemetry observability platform for local development"
authors = [
    {name = "Ryan Faircloth", email = "ryan@faircloth.org"}
]
license = {text = "AGPL-3.0"}
readme = "../../README.md"
keywords = ["opentelemetry", "observability", "tracing", "logging", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI/Web (API only)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "uvloop>=0.19.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    # gRPC (Receiver mode)
    "grpcio>=1.60.0",
    "protobuf>=5.0.0",
    "opentelemetry-proto>=1.24.0",
    # OpenTelemetry (Both modes)
    "opentelemetry-api>=1.22.0",
    "opentelemetry-distro>=0.42b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-logging>=0.42b0",
    # Storage (from common module)
    "redis>=4.5.0,<8.0.0",
    "zstandard>=0.21.0,<1.0.0",
    "msgpack>=1.0.0,<2.0.0",
    "orjson>=3.9.0,<4.0.0",
    "async-lru>=2.0.0,<3.0.0",
]

[project.urls]
Homepage = "https://ryanfaircloth.github.io/ollyscale/"
Repository = "https://github.com/ryanfaircloth/ollyscale"

[project.scripts]
ollyscale = "main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[tool.poetry]
packages = [{include = "app"}, {include = "common"}, {include = "receiver"}]

[tool.poetry.group.test.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-cov = ">=4.1.0"
httpx = ">=0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Inherit from root pyproject.toml
extend = "../../pyproject.toml"
