[project]
name = "ollyscale"
version = "2.3.3"
description = "Lightweight OpenTelemetry observability platform for local development"
authors = [
    {name = "Ryan Faircloth", email = "ryan@faircloth.org"}
]
license = "AGPL-3.0"
keywords = ["opentelemetry", "observability", "tracing", "logging", "metrics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
requires-python = ">=3.11"
dependencies = [
    # Core FastAPI/Web (API only)
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "uvloop>=0.19.0",
    "psutil>=5.9.0",
    "aiohttp>=3.9.0",
    "pyyaml>=6.0",
    # gRPC (Receiver mode)
    "grpcio>=1.60.0",
    "protobuf>=5.0.0",
    "opentelemetry-proto>=1.24.0",
    # OpenTelemetry (Both modes)
    "opentelemetry-api>=1.22.0",
    "opentelemetry-distro>=0.42b0",
    "opentelemetry-exporter-otlp>=1.22.0",
    "opentelemetry-instrumentation-logging>=0.42b0",
    # Storage (from common module)
    "redis>=4.5.0,<8.0.0",
    "zstandard>=0.21.0,<1.0.0",
    "msgpack>=1.0.0,<2.0.0",
    "orjson>=3.9.0,<4.0.0",
    "async-lru>=2.0.0,<3.0.0",
    "asyncpg (>=0.31.0,<0.32.0)",
]

[project.urls]
Homepage = "https://ryanfaircloth.github.io/ollyscale/"
Repository = "https://github.com/ryanfaircloth/ollyscale"

[project.scripts]
ollyscale = "main:main"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
]

[tool.poetry]
packages = [{include = "app"}, {include = "common"}, {include = "receiver"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Target Python version
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E", "W", "F", "I", "B", "C4", "UP", "ARG", "SIM", "TCH", "PTH", "ERA", "PL", "RUF",
]
ignore = [
    "E501", "PLR0913", "PLR0912", "PLR0915", "PLR2004", "PLR0911", "B008", "ERA001",
    "PLW1508", "RUF012", "TCH001", "TCH002", "TCH003",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = ["PLR2004", "S101", "ARG002", "ARG001"]
"**/test_*.py" = ["PLR2004", "S101", "ARG002", "ARG001"]
"**/dependencies.py" = ["PLW0603"]
"**/receiver/server.py" = ["PLW0603", "PLW0602", "PLC0415"]
"**/app/routers/ingest.py" = ["PLW0603", "B904"]
"main.py" = ["PLC0415"]
"**/app/routers/system.py" = ["PLW0603"]
"**/app/services/validation.py" = ["PLW2901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["ollyscale", "app", "common", "receiver"]
